feat(main): make course structure

--- a/labs/lab02/presentation/Makefile
+++ b/labs/lab02/presentation/Makefile
@@ -5,12 +5,12 @@ FILES += $(patsubst %.md, %.html, $(wildcard *.md))
 FILTERS =
 PDF_ENGINE =
 PDF_OPTIONS =
-PDF_FORMAT_OPTIONS = -t beamer --slide-level=2
+PDF_FORMAT_OPTIONS = --toc
 
 FILTERS += --citeproc
 # FILTERS += -F pandoc-crossref
 PDF_ENGINE += --pdf-engine=lualatex
-PDF_OPTIONS += --number-sections
+PDF_OPTIONS =
 
 REVEALJS_THEME = beige
 
